Fixed the order of buttons in nioh2 and equipment_index .html files. Fixed the x-axis spacing for all tables in various .html files.

--- a/css/output.css
+++ b/css/output.css
@@ -718,6 +718,10 @@ video {
   width: 100%;
 }
 
+.w-\[100px\] {
+  width: 100px;
+}
+
 .max-w-\[150px\] {
   max-width: 150px;
 }
